# freeimage_cmake_LiteVer

./: CMakeLists.txt  FreeImageConfig.cmake.in  README.md
FreeImage_extern_app/: CMakeLists.txt  mymathApp.cc
freeimage_19.0.24215.1_install/lib/cmake/freeimage/: freeimageConfig.cmake  freeimageTargets-debug.cmake  freeimageTargets.cmake
install_FreeImage_Ubun2104/include/: version.hpp
install_FreeImage_Ubun2104/lib/cmake/freeimage/: freeimageConfig.cmake  freeimageConfigVersion.cmake  freeimageTargets-debug.cmake  freeimageTargets.cmake
